atlz. projeto cordel

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Leonardo Vitor para o desafio do <a href="https://www.youtube.com/watch?v=cz7AoKGcwlY&list=PLHz_AreHm4dmcAviDwiGgHbeEJToxbOpZ&index=19">Curso em Video</a></p>
+        <p>Site criado por <strong>Leonardo Vitor</strong> para o desafio do <a href="https://www.youtube.com/watch?v=cz7AoKGcwlY&list=PLHz_AreHm4dmcAviDwiGgHbeEJToxbOpZ&index=19">Curso em Video</a></p>
     </footer>
 </body>
 </html>
